# tauri-remote-desktop

./: LICENSE  README.md
remote-desktop-client/: package-lock.json  package.json  tsconfig.json
remote-desktop-client/src/: App.vue  style.css
remote-desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
remote-desktop-client/src-tauri/src/: commands.rs  main.rs
remote-desktop-client/src/common/: Constans.ts  InputEvent.ts
remote-desktop-client/src/components/: RemotePanel.vue
remote_desktop_server/: Cargo.toml
remote_desktop_server/src/: main.rs  server.rs  session.rs
