[package]
name = "remote_desktop_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"